--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,15 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "akaunting/laravel-apexcharts": "^3.0",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.2",
         "laravelcollective/html": "^6.4",
+        "maatwebsite/excel": "^3.1",
+        "nesbot/carbon": "^2.67",
         "realrashid/sweet-alert": "^7.0"
     },
     "require-dev": {
