--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "realrashid/sweet-alert": "^7.0"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.8",
         "fakerphp/faker": "^1.9.1",
         "ibex/crud-generator": "^1.4",
         "laravel/pint": "^1.0",
